# AwesomeScheduler

./: CMakeLists.txt  build.sh  readme.md  task1.xml
header/: Dispatcher.h  EndUser.h  FCFSStrategy.h  Process.h  RRStrategy.h  Scheduler.h  Socket.h  Util.h  dispatcher.h  end-user.h  socket.h  task_properties.h  util.h  worker.h
old/: FCFSStrategy.cpp  GSI-EndUser.cpp  Process.cpp  RRStrategy.cpp  Scheduler.cpp  SchedulingStrategy.h  main.cpp
src/: Dispatcher.cpp  EndUser.cpp  FCFSStrategy.cpp  GSI-Dispatcher.cpp  GSI-EndUser.cpp  RRStrategy.cpp  Scheduler.cpp  Socket.cpp  dispatcher.cpp  end-user.cpp  main.cpp  socket.cpp  task_properties.cpp  worker.cpp
wqueue-master/: Makefile  main.cpp  wqueue
